# rust-postgres-status

./: Cargo.toml  README.md
public/: index.html
public/static/js/: Application.js  Database.js  Util.js  init.js
src/: error.rs  main.rs  options.rs  server.rs
src/config/: mod.rs  validate.rs
src/handler/: dropdb.rs  mod.rs  state.rs  update.rs  util.rs
src/postgres/: database_list.sql  mod.rs  teminate_backends.sql
src/state/: database.rs  error.rs  mod.rs
src/worker/: error.rs  mod.rs
src/worker/postgres/: mod.rs
